--- a/Verslag/SELMA.tex
+++ b/Verslag/SELMA.tex
@@ -1087,7 +1087,18 @@ print('h', 'a', 'l', 'l', 'o');
 \subsection{Pasen}
 Het grootste testprogramma heet pasen, deze wordt ook meegenomen in de test. Pasen berekent middels het algorithme van Gauss wanneer pasen valt in een gegeven jaar. \\
 De SELMA-code is goed gedocumenteerd. De rekenstappen zijn soms wat omslachtig geschreven om gebruik te maken van alle mogelijkheden van de taal.\\
-In de appendix is de code te vinden van pasen, zowel in SELMA als Jasmin.
+In de appendix is de code te vinden van pasen, zowel in SELMA als Jasmin.\\
+De testrunner ondersteund alleen een enkele input en een enkele output. Om dit programma iets grondiger te testen hebben we meerdere inputs en outputs gegeven in het programma \texttt{runpasen}. Dit is een simpel shell script met regels als
+\begin{verbatim}
+	sh selma test/test_pasen.selma <<< $inputjaar >>output
+\end{verbatim}
+
+Aan het eind van het script wordt de \texttt{output} file met de \texttt{expected} output file vergeleken (deze files staan beide in de root directory van het project).\\
+
+Op deze manier kunnen tests in de test directory overigens ook getest worden, als de \texttt{input} en \texttt{output} tags in SELMA comments staan.\\
+
+Tenslotte is de output van een testrun van \texttt{test.py} opgeslagen in \texttt{output.testrun}
+
 
 \newpage
 \section{Conclusies}
@@ -1099,7 +1110,7 @@ We hebben zeker 40 pagina's verslaglegging (met appendices 100+). Waarin we hebb
 Het had ons persoonlijk erg leuk geleken om een optimizer te schrijven, dit is echter nogal wat werk en we zijn daar niet aan toegekomen. Bovendien dienen we aan de boekhouding te denken, in het verslag stond niet duidelijk of dat ons pluspunten zou opleveren.
 De uitdaging aan de optimizer was denk ik het puzzelen geweest, om net overal de code net iets vlotter te maken. Zo is er bijvoorbeeld al rekening gehouden door van elke expressie bij te houden of deze variabele onderdelenbevat, als een expressie compleet constant zou zijn dan zou je immers het net zo goed een maal kunnen uitrekenen en als dergelijk in de code te zetten.\\
 \\
-\todo{Mark, mening?}
+Verder hadden nog leuke dingen toegevoegd kunnen worden aan de taal, die wellicht niet allen even makkelijk zijn met de JVM, maar wel uitdagend. Vooral generators en closures zouden leuk geweest zijn. En de taal heeft erg weinig typen, het zou leuk zijn als de taal toestaat Java classen te importeren en vrij te gebruiken. Ook \texttt{try/catch} en \texttt{try/finally} zouden een meest welkome additie zijn geweest.\
 
 \newpage
 \section{Appendix}
