--- a/Verslag/SELMA.tex
+++ b/Verslag/SELMA.tex
@@ -1024,15 +1024,15 @@ Tests kunnen van de volgende typen zijn:
 
 Bij deze tests kunnen in het programma tags gezet worden, namelijk <input>text</input> voor input voor het programma op stdin, en <output>text</output> voor output van het programma (of de compiler, in het geval van een compile of error test). Error tests beginnen met de prefix 'error\_' in de bestandsnaam, en compile tests met 'compile\_'. Zo kan getest worden voor juiste syntax en semantiek, juiste error reporting bij onjuiste syntax en semantiek, en correctie vertaalregels door middel van correcte executie, en runtime error checking voor juiste programmas met runtime fouten. Om de tests te runnen is Python 2.5+ < 3.0 nodig. De tests kunnen als volgt worden geexecuteerd:
 
-\begin{lstlisting}
-\$ python test.py
-\end{lstlisting}
+\begin{verbatim}
+    $ python test.py
+\end{verbatim}
 
 of
 
-\begin{lstlisting}
-\$ make tests
-\end{lstlisting}
+\begin{verbatim}
+    $ make tests
+\end{verbatim}
 
 
 Als een run test geen output heeft gespecificeerd is de exit status van het programma bepalend of de test faalt of niet. Bij een error test geldt het tegenovergestelde: zonder gespecificeerde output moet de exit status nonzero zijn.
@@ -1101,7 +1101,7 @@ De testrunner ondersteund alleen een enkele input en een enkele output. Om dit p
 	sh selma test/test_pasen.selma <<< $inputjaar >>output
 \end{verbatim}
 
-Aan het eind van het script wordt de \texttt{output} file met de \texttt{expected} output file vergeleken (deze files staan beide in de root directory van het project).\\
+Aan het eind van het script wordt de \texttt{output} file met de \texttt{expected} output file vergeleken (deze files staan beide in de root directory van het project). Het shell script werkt met shells als bash en zsh, maar niet met shells als dash die strict POSIX-compliant proberen te zijn.\\
 
 Op deze manier kunnen tests in de test directory overigens ook getest worden, als de \texttt{input} en \texttt{output} tags in SELMA comments staan.\\
 
@@ -1118,7 +1118,7 @@ We hebben zeker 40 pagina's verslaglegging (met appendices 100+). Waarin we hebb
 Het had ons persoonlijk erg leuk geleken om een optimizer te schrijven, dit is echter nogal wat werk en we zijn daar niet aan toegekomen. Bovendien dienen we aan de boekhouding te denken, in het verslag stond niet duidelijk of dat ons pluspunten zou opleveren.
 De uitdaging aan de optimizer was denk ik het puzzelen geweest, om net overal de code net iets vlotter te maken. Zo is er bijvoorbeeld al rekening gehouden door van elke expressie bij te houden of deze variabele onderdelenbevat, als een expressie compleet constant zou zijn dan zou je immers het net zo goed een maal kunnen uitrekenen en als dergelijk in de code te zetten.\\
 \\
-Verder hadden nog leuke dingen toegevoegd kunnen worden aan de taal, die wellicht niet allen even makkelijk zijn met de JVM, maar wel uitdagend. Vooral generators en closures zouden leuk geweest zijn. En de taal heeft erg weinig typen, het zou leuk zijn als de taal toestaat Java classen te importeren en vrij te gebruiken. Ook \texttt{try/catch} en \texttt{try/finally} zouden een meest welkome additie zijn geweest.\
+Verder hadden nog leuke dingen toegevoegd kunnen worden aan de taal, die wellicht niet allen even makkelijk zijn met de JVM, maar wel uitdagend. Vooral generators en closures zouden leuk geweest zijn. En de taal heeft erg weinig typen, het zou leuk zijn als de taal toestaat Java classen te importeren en vrij te gebruiken. Ook \texttt{try/catch} en \texttt{try/finally} zouden een meest welkome additie zijn geweest.
 
 \newpage
 \section{Appendix}
