kleine additie aan test sectie verslag

--- a/Verslag/SELMA.tex
+++ b/Verslag/SELMA.tex
@@ -1167,6 +1167,7 @@ De testrunner ondersteund alleen een enkele input en een enkele output. Om een p
 \end{verbatim}
 
 Op deze manier kunnen tests in de test directory overigens ook getest worden, als de \texttt{input} en \texttt{output} tags in SELMA comments staan (hetgeen het geval is voor de meeste tests).\\
+Het is echter over het algemeen handiger de code in een functie te zetten en meerdere aanroepen te doen en daarvoor input te geven en output te verwachten.\\
 
 Tenslotte is de output van een testrun van \texttt{test.py} opgeslagen in \texttt{output.testrun}
 
