added pasen output

--- a/Verslag/SELMA.tex
+++ b/Verslag/SELMA.tex
@@ -1223,7 +1223,10 @@ Verder hadden nog leuke dingen toegevoegd kunnen worden aan de taal, die wellich
 %standsnaam met extensie .tam) en een of meer executie voorbeelden met in- en uitvoer
 %waaruit de juiste werking van de gegenereerde code blijkt.
 De code van pasen.
+\subsubsection{Uitvoer van een run van pasen voor 1991}
+\lstinputlisting[style=SELMAfile]{../output.test_pasen}
 
+\newpage
 \subsubsection{SELMA-code van pasen}
 \lstinputlisting[style=SELMAfile]{../test/test_pasen.selma}
 
